--- a/2. IAM, Accounts and AWS Organizations.md
+++ b/2. IAM, Accounts and AWS Organizations.md
@@ -91,7 +91,7 @@ Authenticated Identity
 Authentication
 \- how it proves to IAM that it is the identity it claims to be.
 
-Authentication
+Authorization
 \- IAM checking the policy statements that apply to that identity and allowing or denying access to resources.
 
 Authentication Methods:
@@ -164,7 +164,7 @@ Temporary Credentials
 	\- specifies what resources or permissions the role has with regards to interacting with the AWS services in that AWS account.
 
 Permissions Boundary
-	\- act as a restrictive filter on the permissions that can be granted to a user or role.
+	\- acts as a restrictive filter on the permissions that can be granted to a user or role.
 
 ## When to use IAM Roles
 
@@ -191,7 +191,7 @@ Permissions Boundary
 * Provides permissions that a service needs in order to interact with other AWS services on your behalf.
 * Services might create/delete the service-linked role/s by itself.
 * Service might also allow you to create the role during setup of that service or within the IAM.
-* Difference between a normal IAM Role and a Service-linked Role is that you cannot delete the Service-linked Role until it’s no longer required/used. 
+* Difference between a normal IAM Role and a Service-linked Role is that you cannot delete the Service-linked Role until it’s no longer required/used.
 
 Reference: https://docs.aws.amazon.com/IAM/latest/UserGuide/using-service-linked-roles.html
 
@@ -204,7 +204,7 @@ Role Separation
 
 PassRole Permissions
 	\- a method in AWS which gives you the ability to implement role separation.
-	\- it is essentially a permission to that grants the ability for a user or a service to pass a pre-existing role into a another user or service that will then assume that role.
+	\- a permission to that grants the ability for a user or a service to pass a pre-existing role into a another user or service that will then assume that role.
 
 ## AWS Organizations
 
@@ -356,8 +356,8 @@ CloudTrail Event History
 	\- also known as control plane operations (e.g. creating or deleting an EC2 instance).
 
 2. Data Events (Not Enabled by Default)
-	\- contain information about resource operations performed on or in a resource (e.g. objects being uploaded to an S3 or accessed from an S3). 
-	\- can be enabled/explicitly set  when a trail is created.
+	\- contain information about resource operations performed on or in a resource (e.g. objects being uploaded to an S3 or accessed from an S3).
+	\- can be enabled/explicitly set when a trail is created.
 
 3. Insight Events
 
@@ -459,7 +459,7 @@ Guardrails
 * Detective
 	\- more so of a compliance check.
 	\-  uses AWS Config rules and allows you to check that the configuration of a given thing within an AWS account matches what you define as best practice.
-	\- only identities things and compares to your defined standards.**
+	\- only identifies things and compares to your defined standards.
 
 ![IAM, Accounts and AWS Organizations-06-24-2024-26](images/IAM,%20Accounts%20and%20AWS%20Organizations-06-24-2024-26.png)
 
