--- a/3. Simple Storage Service (S3).md
+++ b/3. Simple Storage Service (S3).md
@@ -263,7 +263,7 @@ Data Encryption Keys (DEKs)
 
 Aliases
 	\- shortcut to keys.
-	\- also region based. 
+	\- also region based.
 
 * Neither aliases nor keys are global by default.
 
@@ -538,7 +538,7 @@ Expiration Actions
 ![Simple Storage Service (S3)-07-01-2024-31](images/Simple%20Storage%20Service%20(S3)-07-01-2024-31.png)
 
 * Be careful when transitioning smaller objects as smaller objects can cost more due to the minimum size depending on the storage class.
-* If transition from S3 Standard it needs to be there for a minimum of 30 days before you can lifecycle transition that object into either of those Infrequent Tiers.
+* If transitioning from S3 Standard it needs to be there for a minimum of 30 days before you can lifecycle transition that object into either of those Infrequent Tiers.
 * An additional 30 days is needed when transitioning from Infrequent Tiers into Glacier tiers if it is all contained in a single rule.
 
 ## S3 Replication
@@ -546,7 +546,7 @@ Expiration Actions
 * Replication configuration is applied to the source bucket.
 * The configuration requires the specification of the destination bucket as part of that replication and also the IAM role to use for the replication process.
 * The role is configured to allow the S3 service to assume it.
-* Replication is encrypted. 
+* Replication is encrypted.
 
 Permissions Policy
 	\* permission to read objects on the source bucket.
@@ -585,7 +585,7 @@ Different Account Replication
 
 * You enable replication on a pair of buckets, a source and a destination, only from that point onwards are objects replicated from source to destination.
 * If you enable replication on a bucket that already has objects. Those existing objects will not be replicated.
-* *Batch replication can be used to replicate existing objects.
+* Batch replication can be used to replicate existing objects.
 * Versioning needs to be enabled for both buckets (source & destination) as a requirement for replication.
 * Replication is able to handle objects that are Unencrypted, and Encrypted objects using SSE-S3, SSE-C (recent addition), and SSE-KMS (with extra configurations).
 * Replication also requires that the owner of the source bucket needs permissions on the objects which will replicate.
@@ -594,7 +594,7 @@ Different Account Replication
 * Delete Markers is not replicated by Default. Can be configured or enabled (DeleteMarkerReplication).
 
 One-Way Replication
-	\- process only meaning from source to destination only.
+	\- from source to destination only type of replication.
 
 Bi-Directional Replication
 	\- is an additional setting which can be configured.
