--- a/4. Virtual Private Cloud (VPC) Basics.md
+++ b/4. Virtual Private Cloud (VPC) Basics.md
@@ -147,7 +147,7 @@ Dynamic Host Configuration Protocol (DHCP) Option Set
 	\- controls if resources in a Subnet are allocated a Public IPv4 Address in addition to that Private Subnet Address automatically.
 	\- it’s on a per subnet basis that you can set auto assign Public IPv4 Addresses.
 
-1. Auto Assign IPv6
+2. Auto Assign IPv6
 	\- for it to work a Subnet has to have an allocation as does the VPC.
 
 **Account Demo VPC Architecture in this Lecture**
@@ -207,11 +207,11 @@ Internet Gateway
 
 ![Virtual Private Cloud (VPC) Basics-07-08-2024-9](images/Virtual%20Private%20Cloud%20(VPC)%20Basics-07-08-2024-9.png)
 
-**IPv4 Addresses with a IGW (Request going from EC2 Instance to Linux Server Update)**
+**IPv4 Addresses with an IGW (Request going from EC2 Instance to Linux Server Update)**
 
 ![Virtual Private Cloud (VPC) Basics-07-08-2024-10](images/Virtual%20Private%20Cloud%20(VPC)%20Basics-07-08-2024-10.png)
 
-**IPv4 Addresses with a IGW (Request going from Linux Server Update to EC2 Instance)**
+**IPv4 Addresses with an IGW (Request going from Linux Server Update to EC2 Instance)**
 
 ![Virtual Private Cloud (VPC) Basics-07-08-2024-11](images/Virtual%20Private%20Cloud%20(VPC)%20Basics-07-08-2024-11.png)
 
@@ -401,7 +401,7 @@ Packet
 * After changing the Source IP Address it then sends the packet to the Internet Gateway.
 
 Translation Table
-	\- a records of all of the packet information.
+	\- a record of all of the packet information.
 
 ![Virtual Private Cloud (VPC) Basics-07-08-2024-28](images/Virtual%20Private%20Cloud%20(VPC)%20Basics-07-08-2024-28.png)
 
