--- a/8. Route 53 - Global DNS.md
+++ b/8. Route 53 - Global DNS.md
@@ -136,7 +136,7 @@ Limitations
 * The key element of Failover routing is the inclusion of a health check.
 * If the health check of the primary record is healthy it is used if not it. The secondary value is used as backup.
 
-**Multi Value Routing**
+## Multi Value Routing
 
 ![Route 53 - Global DNS-07-23-2024-10](images/Route%2053%20-%20Global%20DNS-07-23-2024-10.png)
 
@@ -147,7 +147,7 @@ Limitations
 * Each records is independent and can have an associated Health Check.
 * Used when you have many resources which can all service requests, and you want them all health checked and returned at random.
 
-**Weighted Routing**
+## Weighted Routing
 
 ![Route 53 - Global DNS-07-23-2024-11](images/Route%2053%20-%20Global%20DNS-07-23-2024-11.png)
 
