--- a/12. Serverless and Application Services.md
+++ b/12. Serverless and Application Services.md
@@ -128,7 +128,7 @@ Idempotent Operation
 
 * Looks for new data and gets back Source Batches.
 * Source Batches are then broken up as required based on a Batch Size which is then sent to Lambda as Event Batches.
-* Source service isn’t delivery an event, but Event Source Mapping is instead reading from that source.
+* Source service isn’t delivering an event, but Event Source Mapping is instead reading from that source.
 * SQS Queues or SNS Topics can be used for any discarded failed event batches.
 
 **Lambda Versions**
