--- a/9. Relational Database Service (RDS).md
+++ b/9. Relational Database Service (RDS).md
@@ -14,7 +14,7 @@ Structured Query Language (SQL)
 Schema
 	\- a structure of a database table.
 
-Non-Relation Database
+Non-Relational Database
 	\- more relaxed Schema.
 	\- relationships between tables are handled differently.
 
@@ -37,7 +37,7 @@ Composite Key
 	\- can be found in a join table.
 	\- a key form of two or more parts.
 	\- when combined together they have to be unique.
-	\- used when there is no single key or attribute (i.e no primary keys)available to find unique rows in a table.
+	\- used when there is no single key or attribute (i.e no primary keys) available to find unique rows in a table.
 
 Foreign Key
 	\- a field (or a set of fields) in one table that uniquely identifies a row of another table
