--- a/12. Serverless and Application Services.md
+++ b/12. Serverless and Application Services.md
@@ -357,7 +357,7 @@ Throttling
 
 ![Serverless and Application Services-07-31-2024-9](images/Serverless%20and%20Application%20Services-07-31-2024-9.png)
 
-**3 Phases in API Gateway Interactions**
+**2 Phases in API Gateway Interactions**
 
 1. Request
 	\- where the client makes a request through the API Gateway.
@@ -451,7 +451,7 @@ Error Code Reference: https://docs.aws.amazon.com/apigateway/latest/api/CommonEr
 * Received messages are hidden (VisibilityTimeout).
 * Messages can be explicitly deleted once it has been processed, otherwise it will re-appear in the Queue.
 * ASGs can scale and Lambdas invoked based on Queue length.
-* Messages can live in an SQS Queue for 1 up to 14 days.
+* Messages can live in an SQS Queue for 1 minute up to 14 days.
 * Default Retention Period is 4 days.
 
 Polling
